feat: Writer implementation with buffer and quoting
- PooledBufferWriter with ArrayPool management
- QuotingRules with vectorized delimiter detection
- TooNetWriter core implementation
- Support for primitives, objects, and indentation
- Comprehensive test coverage

--- a/src/TooNet/TooNet.csproj
+++ b/src/TooNet/TooNet.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <AssemblyName>TooNet</AssemblyName>
     <RootNamespace>TooNet</RootNamespace>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
     <!-- NuGet Package Metadata -->
