--- a/src/TooNet/TooNet.csproj
+++ b/src/TooNet/TooNet.csproj
@@ -18,4 +18,9 @@
   <ItemGroup>
     <None Include="../../README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="TooNet.Tests" />
+    <InternalsVisibleTo Include="TooNet.Benchmarks" />
+  </ItemGroup>
 </Project>
