--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/TooNet.sln",
+        "${workspaceFolder}/TooNet.slnx",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
@@ -18,65 +18,6 @@
       }
     },
     {
-      "label": "build-release",
-      "command": "dotnet",
-      "type": "process",
-      "args": [
-        "build",
-        "${workspaceFolder}/TooNet.sln",
-        "-c",
-        "Release",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
-      "problemMatcher": "$msCompile"
-    },
-    {
-      "label": "test",
-      "command": "dotnet",
-      "type": "process",
-      "args": [
-        "test",
-        "${workspaceFolder}/TooNet.sln"
-      ],
-      "problemMatcher": "$msCompile",
-      "group": {
-        "kind": "test",
-        "isDefault": true
-      }
-    },
-    {
-      "label": "test-with-coverage",
-      "command": "dotnet",
-      "type": "process",
-      "args": [
-        "test",
-        "${workspaceFolder}/TooNet.sln",
-        "--collect:\"XPlat Code Coverage\""
-      ],
-      "problemMatcher": "$msCompile"
-    },
-    {
-      "label": "clean",
-      "command": "dotnet",
-      "type": "process",
-      "args": [
-        "clean",
-        "${workspaceFolder}/TooNet.sln"
-      ],
-      "problemMatcher": "$msCompile"
-    },
-    {
-      "label": "restore",
-      "command": "dotnet",
-      "type": "process",
-      "args": [
-        "restore",
-        "${workspaceFolder}/TooNet.sln"
-      ],
-      "problemMatcher": "$msCompile"
-    },
-    {
       "label": "run-benchmarks",
       "command": "dotnet",
       "type": "process",
@@ -85,7 +26,7 @@
         "-c",
         "Release",
         "--project",
-        "${workspaceFolder}/benchmarks/TooNet.Benchmarks/TooNet.Benchmarks.csproj"
+        "${workspaceFolder}/TooNet.Benchmarks/TooNet.Benchmarks.csproj"
       ],
       "problemMatcher": "$msCompile"
     },
@@ -98,24 +39,11 @@
         "-c",
         "Release",
         "--project",
-        "${workspaceFolder}/benchmarks/TooNet.Benchmarks/TooNet.Benchmarks.csproj",
+        "${workspaceFolder}/TooNet.Benchmarks/TooNet.Benchmarks.csproj",
         "--",
         "--quick"
       ],
       "problemMatcher": "$msCompile"
-    },
-    {
-      "label": "watch",
-      "command": "dotnet",
-      "type": "process",
-      "args": [
-        "watch",
-        "run",
-        "--project",
-        "${workspaceFolder}/src/TooNet/TooNet.csproj"
-      ],
-      "problemMatcher": "$msCompile",
-      "isBackground": true
     }
   ]
 }
