--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/tests/TooNet.Tests/bin/Debug/net9.0/TooNet.Tests.dll",
+      "program": "${workspaceFolder}/TooNet.Tests/bin/Debug/net9.0/TooNet.Tests.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/tests/TooNet.Tests",
+      "cwd": "${workspaceFolder}/TooNet.Tests",
       "stopAtEntry": false,
       "console": "internalConsole"
     },
@@ -17,9 +17,9 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build-release",
-      "program": "${workspaceFolder}/benchmarks/TooNet.Benchmarks/bin/Release/net9.0/TooNet.Benchmarks.dll",
+      "program": "${workspaceFolder}/TooNet.Benchmarks/bin/Release/net9.0/TooNet.Benchmarks.dll",
       "args": ["--quick"],
-      "cwd": "${workspaceFolder}/benchmarks/TooNet.Benchmarks",
+      "cwd": "${workspaceFolder}/TooNet.Benchmarks",
       "stopAtEntry": false,
       "console": "internalConsole"
     },
